@@ -4,7 +4,11 @@ Change History
 1.7.17 (unreleased)
 -------------------
 
-- fixed loading of widget javascripts in quickedit (#95) [reinhardt]
+- Fixed MaxLengthValidator when string is Unicode
+  [gotcha]
+
+- Fixed loading of widget javascripts in quickedit (#95)
+  [reinhardt]
 
 
 1.7.16 (2014-09-26)
@@ -1467,7 +1471,7 @@ Change History
    exception if the user tries to injure themselves this way. (tracker
    #32, thanks, Rocky Burt)
 
- - Fixed a problem with the MaxLengthValdiator where sometimes an unset
+ - Fixed a problem with the MaxLengthValidator where sometimes an unset
    (by the user) widget.maxlength actually has an empty string as the
    value which would make the int(widget.maxlength) call fail (Rocky
    Burt).
